# nbwipers

./: .gitattributes  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  Cargo.toml  CommandLineHelp.md  LICENSE  README.md  deny.toml  justfile  make_commandlinehelp.ps1  pyproject.toml
.config/: nextest.toml
.github/workflows/: CI.yml  release.yml  testing.yml
src/: cell_impl.rs  check.rs  cli.rs  config.rs  extra_keys.rs  files.rs  hooks.rs  install.rs  lib.rs  main.rs  record.rs  schema.rs  settings.rs  smudge.rs  strip.rs  types.rs  utils.rs  wipers.rs
src/install/: attributes.rs  gitconfig.rs  mod.rs
tests/: integration_test.rs  notebook_test.rs  record_and_smudge.rs  test_nbformat2.ipynb
tests/e2e_notebooks/: test_drop_empty_cells.toml  test_drop_tagged_cells.toml  test_keep_metadata_keys.toml  test_max_size.ipynb  test_metadata_extra_keys.toml  test_metadata_keep_count.toml  test_metadata_keep_output.toml  test_metadata_keep_output_keep_count.toml  test_metadata_period.toml  test_metadata_strip_kernelinfo.ipynb.expected  test_metadata_strip_kernelinfo.toml  test_nbformat45.drop_id.ipynb.expected  test_nbformat45.ipynb  test_nbformat45.ipynb.expected  test_nbformat45.sequential_id.ipynb.expected  test_nbformat45.toml  test_nbformat45_drop.toml  test_nbformat45_sequential.toml  test_strip_init_cells.toml
tests/snapshots/: notebook_test__test_drop_empty_cells_cli_json.snap  notebook_test__test_drop_empty_cells_cli_text.snap  notebook_test__test_drop_empty_cells_dontdrop_json.snap  notebook_test__test_drop_empty_cells_dontdrop_text.snap  notebook_test__test_drop_tagged_cells_cfg_json.snap  notebook_test__test_drop_tagged_cells_cli_text.snap  notebook_test__test_drop_tagged_cells_dontdrop_json.snap  notebook_test__test_drop_tagged_cells_dontdrop_text.snap  notebook_test__test_execution_timing_cfg_json.snap  notebook_test__test_execution_timing_cfg_text.snap  notebook_test__test_keep_metadata_keys_cfg_text.snap  notebook_test__test_metadata_extra_keys_cfg_json.snap  notebook_test__test_metadata_extra_keys_cfg_text.snap  notebook_test__test_metadata_extra_keys_cli_text.snap  notebook_test__test_metadata_json.snap  notebook_test__test_metadata_keep_count_cli_json.snap  notebook_test__test_metadata_keep_count_cli_text.snap  notebook_test__test_metadata_keep_output_cfg_json.snap  notebook_test__test_metadata_keep_output_cli_text.snap  notebook_test__test_metadata_keep_output_keep_count_cfg_json.snap  notebook_test__test_metadata_keep_output_keep_count_cfg_text.snap  notebook_test__test_metadata_notebook_json.snap  notebook_test__test_metadata_period_cli_json.snap  notebook_test__test_metadata_period_cli_text.snap  notebook_test__test_metadata_strip_kernelinfo_cfg_text.snap  notebook_test__test_metadata_strip_kernelinfo_cli_json.snap  notebook_test__test_metadata_text.snap  notebook_test__test_nbformat45_cli_text.snap  notebook_test__test_nbformat45_expected_drop_id_cfg_json.snap  notebook_test__test_nbformat45_expected_drop_id_cli_text.snap  notebook_test__test_nbformat45_expected_sequential_id_cfg_json.snap  notebook_test__test_nbformat45_expected_sequential_id_cli_text.snap  notebook_test__test_strip_exclude_respect_cli_json.snap  notebook_test__test_strip_init_cells_cfg_text.snap  notebook_test__test_strip_init_cells_cli_json.snap  notebook_test__test_unicode_json.snap  notebook_test__test_unicode_text.snap  notebook_test__test_widgets_json.snap  notebook_test__test_widgets_text.snap
