[package]
name = "nbwipers"
version = "0.3.7"
edition = "2021"
license = "MIT"
description = "Wipe clean your Jupyter Notebooks!"
repository = "https://github.com/felixgwilliams/nbwipers"
homepage = "https://github.com/felixgwilliams/nbwipers"
readme = "README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["python", "notebook", "jupyter", "ci", "pre-commit"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bstr = "1.9.0"
clap = { version = "4.4.18", features = ["derive"] }
clap-markdown = { version = "0.1.3", optional = true }
colored = "2.1.0"
gix-attributes = "0.22.0"
gix-config = { version = "0.37.0" }
gix-discover = "0.32.0"
gix-path = "0.10.5"
ignore = "0.4.22"
inquire = "0.7.0"
itertools = "0.13.0"
path-absolutize = { version = "3.1.1", features = ["once_cell_cache"] }
rayon = "1.8.1"
rustc-hash = "1.1.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113", features = ["preserve_order"] }
serde_with = "3.6.0"
thiserror = "1.0.56"
toml = "0.8.9"


[features]
markdown-help = ["dep:clap-markdown"]

[dev-dependencies]
lazy_static = "1.4.0"
tempfile = "3.10.0"
