[package]
name = "nbwipers"
version = "0.6.2"
edition = "2024"
description = "Wipe clean your Jupyter Notebooks!"
readme = "README.md"
homepage = "https://github.com/felixgwilliams/nbwipers"
repository = "https://github.com/felixgwilliams/nbwipers"
license = "MIT"
keywords = ["ci", "jupyter", "notebook", "pre-commit", "python"]
categories = ["command-line-utilities", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.79"
bstr = "^1.9.0"
clap = { version = "^4.4.18", features = ["color", "derive"] }
clap-markdown = { version = "^0.1.3", optional = true }
colored = "3.0.0"
gix-attributes = "^0.33.0"
gix-config = { version = "^0.56.0", features = ["sha1"] }
gix-discover = { version = "^0.51.0", features = ["sha1"] }
gix-path = "^0.12.0"
globset = "^0.4.14"
ignore = "^0.4.22"
indexmap = { version = "^2.7.0", features = ["rayon", "serde"] }
inquire = "^0.9.4"
itertools = "0.14.0"
path-absolutize = { version = "^3.1.1", features = ["once_cell_cache"] }
rayon = "^1.8.1"
rustc-hash = "^2.0.0"
serde = { version = "^1.0.196", features = ["derive"] }
serde_json = { version = "^1.0.113", features = ["preserve_order"] }
serde_with = "^3.6.0"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "^2.0.4"
toml = "^1.1.2"

[dev-dependencies]
insta = { version = "1.39.0", features = ["yaml"] }
lazy_static = "1.4.0"
tempfile = "3.10.0"

[features]
markdown-help = ["dep:clap-markdown"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)", "cfg(coverage)"] }
