[project]
name = "nbwipers"
description = "A command line tool to wipe clean jupyter notebooks, written in Rust"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Rust",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/felixgwilliams/nbwipers"
Issues = "https://github.com/felixgwilliams/nbwipers/issues"

[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "bin"

[tool.nbwipers]
extend-exclude = ["tests/e2e_notebooks/*"]

[tool.typos]
files.extend-exclude = ["tests/e2e_notebooks/*"]
